instance1/temp-retrieve/objects/Patient_Agreement__c/Patient_Agreement__c.object-meta.xml
<CustomObject>
    <description>This object is designed to be the source of truth of what form the patient has signed, been sent, or viewed to be able to track if a patient can have a service performed.</description>
    <label>Patient Agreement</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Patient Agreement</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>