instance1/temp-retrieve/objects/Patient_Agreement__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <formula>Patient__r.Owner.FirstName + &quot; &quot; + Patient__r.Owner.LastName</formula>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>