instance1/temp-retrieve/objects/Patient_Agreement__c/fields/Adobe_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Adobe_Document_Id__c</fullName>
    <description>The unique id for the consent form document sent to Adobe</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Adobe Document Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>