instance1/temp-retrieve/objects/Patient_Agreement__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Patient_Agreement_Type</valueSetName>
    </valueSet>
</CustomField>