instance1/temp-retrieve/objects/Patient_Agreement__c/fields/Agreement_Version__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Version__c</fullName>
    <description>The version of the agrrement the patient was sent.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Agreement Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>