instance1/temp-retrieve/objects/Patient_Agreement__c/fields/Child_Approved__c.field-meta.xml
<CustomField>
    <fullName>Child_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will denote if any one of the primary patient agreements had been approved this will be marked true.</description>
    <inlineHelpText>If this is checked a Child Patient Agreement has been Approved</inlineHelpText>
    <label>Child Approved</label>
    <type>Checkbox</type>
</CustomField>