instance1/temp-retrieve/objects/Patient_Agreement__c/fields/Created_From_Case__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the Patient Agreement was created from a case this checkbox will be true.</description>
    <label>Created From Case</label>
    <type>Checkbox</type>
</CustomField>