instance1/temp-retrieve/objects/Patient_Agreement__c/fields/Date_Approved_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved_Rejected__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Approved/Rejected</label>
    <type>DateTime</type>
</CustomField>