instance1/temp-retrieve/objects/Patient_Agreement__c/fields/Date_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_Signed__c</fullName>
    <description>When the consent form was signed/completed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Signed</label>
    <type>DateTime</type>
</CustomField>