instance1/temp-retrieve/objects/Patient_Agreement__c/fields/Date_Viewed__c.field-meta.xml
<CustomField>
    <fullName>Date_Viewed__c</fullName>
    <description>When the consent form was viewed/clicked</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Viewed</label>
    <type>DateTime</type>
</CustomField>