instance1/temp-retrieve/objects/Patient_Agreement__c/fields/DocGen_Package_Id__c.field-meta.xml
<CustomField>
    <fullName>DocGen_Package_Id__c</fullName>
    <formula>Patient_Agreement_Configuration__r.DocGen_Package_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DocGen Package Id</label>
    <type>Text</type>
</CustomField>