instance1/temp-retrieve/objects/Patient_Agreement__c/fields/EHR_Document_Link__c.field-meta.xml
<CustomField>
    <fullName>EHR_Document_Link__c</fullName>
    <formula>IF(
  ISBLANK(EHR_Document_Id__c),
  &apos;Not Synced to EHR&apos;,
    HYPERLINK(
      &apos;https://drchrono.com/misc/patient_documents/&apos; +
        Patient__r.DrChrono_Id__c,
      &apos;Click here to go to the EHR Documents&apos;
  )
)</formula>
    <label>EHR Document Link</label>
    <type>Text</type>
</CustomField>