instance1/temp-retrieve/objects/Patient_Agreement__c/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <label>File Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PDF</fullName>
                <default>true</default>
                <label>PDF</label>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>JSON</fullName>
            </value>
            <value>
                <fullName>Blood Testing</fullName>
            </value>
            <value>
                <fullName>Genetic Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>