instance1/temp-retrieve/objects/Patient_Agreement__c/fields/Last_Annual_Lab_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Annual_Lab_Date__c</fullName>
    <formula>Patient__r.Last_Annual_Lab_Date__c</formula>
    <label>Last Annual Lab Date</label>
    <type>Date</type>
</CustomField>