instance1/temp-retrieve/objects/Patient_Agreement__c/fields/Last_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sent_Date__c</fullName>
    <description>When was the last time this patient agreement was sent to the patient.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Sent Date</label>
    <type>DateTime</type>
</CustomField>