instance1/temp-retrieve/objects/Patient_Agreement__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The patient account that this consent form was sent for.</description>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Consent_Forms</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>