instance1/temp-retrieve/objects/Patient_Agreement__c/fields/Patient_Agreement_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Patient_Agreement_Configuration__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The type of agreement sent to the customer. This configuration record will hold what document and different reasons why this client got this document.</description>
    <label>Patient Agreement Configuration</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Patient Agreement Must Be Active to be assigned to this agreeemnt</errorMessage>
        <filterItems>
            <field>Patient_Agreement_Configuration__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Patient_Agreement_Configuration__c</referenceTo>
    <relationshipLabel>Patient Agreements</relationshipLabel>
    <relationshipName>Agreement</relationshipName>
    <type>Lookup</type>
</CustomField>