instance1/temp-retrieve/objects/Patient_Agreement__c/fields/Patient_Email__c.field-meta.xml
<CustomField>
    <fullName>Patient_Email__c</fullName>
    <formula>Patient__r.PersonContact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Email</label>
    <type>Text</type>
</CustomField>