instance1/temp-retrieve/objects/Patient_Agreement__c/fields/TRIG_FILE_UPLOAD__c.field-meta.xml
<CustomField>
    <fullName>TRIG_FILE_UPLOAD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used as an internal trigger to force the file upload to DrChrono</description>
    <label>TRIG_FILE_UPLOAD</label>
    <type>Checkbox</type>
</CustomField>