instance1/temp-retrieve/objects/Patient_Agreement__c/listViews/Accounts_for_Review_Questionnaires.listView-meta.xml
<ListView>
    <fullName>Accounts_for_Review_Questionnaires</fullName>
    <columns>Patient__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Date_Sent__c</columns>
    <columns>Last_Sent_Date__c</columns>
    <columns>Number_Of_Times_Sent__c</columns>
    <columns>Notes__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Agreement_Type__c</field>
        <operation>equals</operation>
        <value>Questionnaire</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Received</value>
    </filters>
    <label>Accounts for Review: Questionnaires</label>
</ListView>