instance1/temp-retrieve/objects/Patient_Agreement__c/listViews/Accounts_with_sent_Consent_Forms.listView-meta.xml
<ListView>
    <fullName>Accounts_with_sent_Consent_Forms</fullName>
    <columns>Patient__c</columns>
    <columns>NAME</columns>
    <columns>Date_Sent__c</columns>
    <columns>Last_Sent_Date__c</columns>
    <columns>Number_Of_Times_Sent__c</columns>
    <columns>Notes__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Agreement_Type__c</field>
        <operation>equals</operation>
        <value>Consent</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Sent</value>
    </filters>
    <label>Accounts with sent Consent Forms</label>
</ListView>