instance1/temp-retrieve/objects/Patient_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Date_Sent__c</columns>
    <columns>Date_Signed__c</columns>
    <columns>Agreement_Version__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Patient_Agreement_Configuration__c</field>
        <operation>contains</operation>
        <value>Health History &amp; Lifestyle Questionnaire</value>
    </filters>
    <label>All</label>
</ListView>