instance1/temp-retrieve/objects/Patient_Agreement__c/listViews/Physical_Approved_Consent_Forms.listView-meta.xml
<ListView>
    <fullName>Physical_Approved_Consent_Forms</fullName>
    <columns>Patient__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>EHR_Document_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Physical</value>
    </filters>
    <label>Physical Approved Consent Forms</label>
</ListView>